2005-08-14  Mark McLoughlin  <mark@skynet.ie>

	* simple-editor/GMenuSimpleEditor/main.py:
	Fix a python syntax warning.

2005-08-12  Mark McLoughlin  <mark@skynet.ie>

	Fixes bug #313232 - memory corruption issue where notifies
	were being removed from under us as we walked the list of
	notifies.

	* libmenu/menu-monitor.c:
	(menu_monitor_notify_ref),
	(menu_monitor_notify_unref): make MenuMonitorNotify refcounted.
	(menu_monitor_add_notify): set initial refcount.
	(menu_monitor_remove_notify): when removing the notify, unset
	the callback pointer and unref.
	(invoke_notifies): make a copy of the notifies list and
	ref each notify before invoking the callbacks - callbacks
	may cause arbitrary notifies to be removed as we walk the
	list.
	(menu_monitor_unref): unref each of the notifies rather
	than freeing them.

2005-08-09  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.11.92.

==================== 2.11.91 ====================

2005-08-09  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.11.91.
	
2005-08-02  Mark McLoughlin  <mark@skynet.ie>

	Based on patch from Dennis Cranston <dennis_cranston@yahoo.com>
	in bug #312117

	* simple-editor/gmenu-simple-editor.desktop.in: add a .desktop
	file only so it may be launched using startup-notification.
	
	* simple-editor/Makefile.am: generate and install the .desktop
	file.

2005-08-02  Mark McLoughlin  <mark@skynet.ie>

	Based on patch from in Jaap A. Haitsma <jaap@haitsma.org>
	in bug #312143

	* simple-editor/GMenuSimpleEditor/maindialog.py:
	use gnome-main-menu as the window icon instead of
	non-existant gmenu-simple-editor
	
2005-08-02  Mark McLoughlin  <mark@skynet.ie>

	Allow running gmenu-simple-editor with a python
	from a different prefix. Fixes bug #312274

	* simple-editor/gmenu-simple-editor: remove
	
	* simple-editor/gmenu-simple-editor.in: if
	pyexecdir isn't in sys.path, insert it before
	trying to import main module.
	
	* simple-editor/Makefile.am: generate